# unity-api-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
src/unity_api_mcp/: cs_doc_parser.py  db.py  ingest.py  server.py  unity_paths.py  version.py  xml_parser.py
src/unity_api_mcp/data/: unity_docs.db-shm
src/unity_docs_mcp/: db.py  ingest.py  server.py
