[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unity-api-mcp"
version = "1.0.0"
description = "MCP server providing ground-truth Unity 6 API documentation — prevents AI hallucination of signatures, namespaces, and deprecated APIs"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ingest = [
    "lxml>=5.0",
]

[project.scripts]
unity-api-mcp = "unity_api_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unity_api_mcp"]
exclude = ["*.db-shm", "*.db-wal"]

[tool.hatch.build.targets.wheel.force-include]
"src/unity_api_mcp/data/unity_docs.db" = "unity_api_mcp/data/unity_docs.db"
