[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unity-api-mcp"
version = "1.0.1"
description = "MCP server providing ground-truth Unity 6 API documentation — prevents AI hallucination of signatures, namespaces, and deprecated APIs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Codeturion", email = "fuatcankoseoglu@gmail.com"},
]
keywords = ["mcp", "unity", "api", "documentation", "ai", "claude", "game-development"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/Codeturion/unity-api-mcp"
Repository = "https://github.com/Codeturion/unity-api-mcp"
Issues = "https://github.com/Codeturion/unity-api-mcp/issues"

[project.optional-dependencies]
ingest = [
    "lxml>=5.0",
]

[project.scripts]
unity-api-mcp = "unity_api_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unity_api_mcp"]
exclude = ["*.db-shm", "*.db-wal"]

[tool.hatch.build.targets.wheel.force-include]
"src/unity_api_mcp/data/unity_docs.db" = "unity_api_mcp/data/unity_docs.db"
